# test

./: minh.h
bcl/bcl/containers/: Container.hpp
boost_study/: hello  hello.cpp
cmake_study/: CMakeLists.txt
cmake_study/lib/: factorial.h
coolMUC_2/gaspi/: Makefile
coolMUC_2/gaspi/examples/: l11_matrix_transpose_write.cpp  l14_gaspi_read_notify.cpp  l15_global_lock.cpp  l17_success_or_die.h
coolMUC_2/gaspi/jobs/: gaspi.289478.i23r02c01s08.out
coolMUC_2/hwloc/: hello  hello.cmd
coolMUC_2/mpi/: Makefile  myjob.cmd
coolMUC_2/mpi+omp/: myjob.cmd
coolMUC_2/mpi/examples/: hello_world.cpp  rput_sync.cpp
coolMUC_2/omp/: Makefile  myjob.cmd
coolMUC_2/omp/examples/: hello.cpp
coolmuc2/gaspi/: Makefile  myjob.cmd
coolmuc2/gaspi/examples/: l01_allgather_write.cpp  l07_hello_world.cpp  l16_user_defined_allreduce.f  (+7 more)
coolmuc2/hwloc/: hello.cpp
coolmuc2/mpi+omp/: Makefile
gaspi/: hello  hello.cpp
hwloc/: hello.cpp
laptop/cmake_study/: hello.cpp
laptop/cxx/: main.cpp
laptop/hwloc/: hello
laptop/mpi/: data_type.cpp
laptop/omp/: Makefile  atomic.cpp
laptop/reclamation/: .stack_treiber.cpp.swp  EBR.h  EBR2.h  EBR3.h  HEBR.h  HPBR.h  LHBR.h  Makefile  TGEIBR.h  TagIBR.h  TagIBR_FAA.h  abstract_tree.h  epoch_based_reclamation.h  hazard_pointers_blocking.h  hello.cpp  local_history.h  out  pool.cpp  stack_ebs.cpp  stack_treiber.cpp
laptop/rpclib_study/: server.cpp
mpi/hello/: hello.cpp
omp/: hello.cpp
rpclib_study/: client  client.cpp  server
superMUC_NG/: Makefile  main  script  sol1  sol1.cpp
superMUC_NG/hwloc/: mytest  mytest.cpp
(+159 files in other folders)
